fb div added for test

--- a/index.html
+++ b/index.html
@@ -27,6 +27,12 @@
      fjs.parentNode.insertBefore(js, fjs);
    }(document, 'script', 'facebook-jssdk'));
 </script>
+<div
+  class="fb-like"
+  data-share="true"
+  data-width="450"
+  data-show-faces="true">
+</div>
     <section class="page-header">
       <h1 class="project-name">Tarunjit.GitHub.io</h1>
       <h2 class="project-tagline"></h2>
