--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
    }(document, 'script', 'facebook-jssdk'));
 </script>
     <section class="page-header">
-      <h1 class="project-name">Tarunjit.GitHub.io</h1>
+      <h1 class="project-name">Tarunjit Singh</h1>
       <h2 class="project-tagline"></h2>
     </section>
 
