--- a/index.html
+++ b/index.html
@@ -1,6 +1,25 @@
 <head> Website under construction</head>
-<body> 
-<script>
+<body>
+  <script>
+  window.fbAsyncInit = function() {
+    FB.init({
+      appId      : '897726960310349',
+      xfbml      : true,
+      version    : 'v2.4'
+    });
+
+    // ADD ADDITIONAL FACEBOOK CODE HERE
+  };
+
+  (function(d, s, id){
+     var js, fjs = d.getElementsByTagName(s)[0];
+     if (d.getElementById(id)) {return;}
+     js = d.createElement(s); js.id = id;
+     js.src = "//connect.facebook.net/en_US/sdk.js";
+     fjs.parentNode.insertBefore(js, fjs);
+   }(document, 'script', 'facebook-jssdk'));
+</script> 
+<!--script> 
   window.fbAsyncInit = function() {
     FB.init({
       appId      : '1032879976756924',
@@ -16,7 +35,7 @@
      js.src = "//connect.facebook.net/en_US/sdk.js";
      fjs.parentNode.insertBefore(js, fjs);
    }(document, 'script', 'facebook-jssdk'));
-</script>
+</script-->
 <div
   class="fb-like"
   data-share="true"
