--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<head> Website under construction</head>
+<head> Website under construction.</head>
 <body>
 <script>
   window.fbAsyncInit = function() {
